feat: 依赖升级、多语言、安全能力升级、依赖关系优化

--- a/shoulder-build/shoulder-base/shoulder-security/pom.xml
+++ b/shoulder-build/shoulder-base/shoulder-security/pom.xml
@@ -38,12 +38,13 @@
             <optional>true</optional>
         </dependency>
 
-        <!-- oauth2 授权服务器相关依赖 deprecated -->
+        <!-- oauth2 授权服务器相关依赖 deprecated TODO 废弃与 spring security oauth 项目相关的类，改为替代品 -->
         <dependency>
             <groupId>org.springframework.security.oauth</groupId>
             <artifactId>spring-security-oauth2</artifactId>
             <optional>true</optional>
         </dependency>
+
         <!--Spring Security OAuth通过提供了自己的JWT支持spring-security-jwt。
             Spring Security依靠Nimbus来提供JWT支持。-->
         <!--<dependency>
