feat: 添加新模块（暂未开放）

--- a/shoulder-build/pom.xml
+++ b/shoulder-build/pom.xml
@@ -26,6 +26,7 @@
     <modules>
         <module>shoulder-base</module>
         <module>shoulder-starters</module>
+        <module>shoulder-plugins</module>
     </modules>
 
 </project>
