--- a/shoulder-dependencies/pom.xml
+++ b/shoulder-dependencies/pom.xml
@@ -64,7 +64,7 @@
         <commons-email.version>1.5</commons-email.version>
         <commons-io.version>2.8.0</commons-io.version>
         <commons-configuration.version>1.10</commons-configuration.version>
-        <commons-lang3.version>3.12</commons-lang3.version>
+        <commons-lang3.version>3.11</commons-lang3.version>
         <commons-net.version>3.6</commons-net.version>
         <commons-daemon.version>1.2.4</commons-daemon.version>
 
@@ -104,7 +104,7 @@
 
         <!-- test -->
         <mockito-all.version>1.10.19</mockito-all.version>
-        <powermock.version>1.7.4</powermock.version>
+        <powermock.version>2.0.9</powermock.version>
 
 
     </properties>
@@ -320,6 +320,21 @@
 
             <!--shoulder-starters end -->
 
+            <!--shoulder-ext begin -->
+
+            <dependency>
+                <groupId>cn.itlym</groupId>
+                <artifactId>shoulder-ext-common</artifactId>
+                <version>${shoulder.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>cn.itlym</groupId>
+                <artifactId>shoulder-ext-config</artifactId>
+                <version>${shoulder.version}</version>
+            </dependency>
+
+            <!--shoulder-ext end -->
 
             <!-- ====================================== The third party ========================================== -->
 
