--- a/shoulder-build/shoulder-plugins/shoulder-ext-common/pom.xml
+++ b/shoulder-build/shoulder-plugins/shoulder-ext-common/pom.xml
@@ -22,14 +22,29 @@
             <groupId>cn.itlym</groupId>
             <artifactId>shoulder-core</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>cn.itlym</groupId>
+            <artifactId>shoulder-data-db</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.zaxxer</groupId>
+            <artifactId>HikariCP</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>cn.itlym</groupId>
             <artifactId>shoulder-validation</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-tx</artifactId>
-        </dependency>
+
     </dependencies>
 
     <build>
