--- a/shoulder-dependencies/pom.xml
+++ b/shoulder-dependencies/pom.xml
@@ -26,13 +26,12 @@
         <nimbus-jose-jwt.version>8.21</nimbus-jose-jwt.version>
         <spring-oauth2-server.version>0.1.0</spring-oauth2-server.version>
 
-        <spring-boot.version>2.4.5</spring-boot.version>
-        <!--<spring-boot.version>2.3.10.RELEASE</spring-boot.version>-->
+        <spring-boot.version>2.6.4</spring-boot.version>
         <!-- 由于Spring Boot提供了Maven BOM来管理依赖版本，因此您无需指定版本 -->
 
         <!-- 与 boot 版本对应关系 https://start.spring.io/actuator/info -->
         <!-- 最新 spring cloud 版本：https://spring.io/projects/spring-cloud#learn -->
-        <spring-cloud.version>2020.0.2</spring-cloud.version>
+        <spring-cloud.version>2021.0.1</spring-cloud.version>
         <!--<spring-cloud.version>Hoxton.SR10</spring-cloud.version>-->
 
         <!-- build -->
@@ -42,9 +41,9 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <!-- api-doc -->
-        <swagger2.version>1.6.2</swagger2.version>
+        <swagger2.version>1.6.5</swagger2.version>
         <!-- openApi(swagger)是行业标准，swagger 1.7 更名为 io.swagger.core.v3 但 swagger2 绝大多数开发者更熟悉而非 swagger3 -->
-        <swagger3.version>2.1.9</swagger3.version>
+        <swagger3.version>2.1.13</swagger3.version>
 
         <!-- 使用 springfox 解析文档 -->
         <springfox.version>3.0.0</springfox.version>
@@ -54,7 +53,7 @@
         <!-- csv 解析 https://github.com/uniVocity/univocity-parsers/releases -->
         <univocity.version>2.9.1</univocity.version>
         <!-- xml 解析 https://github.com/x-stream/xstream/releases -->
-        <xstream.version>1.4.17</xstream.version>
+        <xstream.version>1.4.19</xstream.version>
 
         <!-- apache-common-tools -->
         <commons-beanutils.version>1.9.3</commons-beanutils.version>
@@ -68,39 +67,39 @@
         <commons-net.version>3.6</commons-net.version>
         <commons-daemon.version>1.2.4</commons-daemon.version>
 
-
+        <!-- java native access -->
         <jna.version>5.8.0</jna.version>
         <!-- useful tools -->
         <pinyin4j.version>2.5.1</pinyin4j.version>
-        <hutool.version>5.6.3</hutool.version>
-        <javassist.version>3.27.0-GA</javassist.version>
+        <hutool.version>5.7.22</hutool.version>
+        <javassist.version>3.28.0-GA</javassist.version>
         <javax.ws.rs-api.version>2.1.1</javax.ws.rs-api.version>
 
-        <guava.version>30.1.1-jre</guava.version>
+        <guava.version>31.1-jre</guava.version>
         <findbugs-annotations.version>3.0.0</findbugs-annotations.version>
         <!-- inheritable threadLocal https://github.com/alibaba/transmittable-thread-local/releases -->
-        <alibaba.transmittable.version>2.12.1</alibaba.transmittable.version>
+        <alibaba.transmittable.version>2.12.5</alibaba.transmittable.version>
 
-        <bcprov.jdk15on.version>1.68</bcprov.jdk15on.version>
-        <bcpkix.jdk15on.version>1.68</bcpkix.jdk15on.version>
-        <caffeine.version>2.8.5</caffeine.version>
+        <bcprov.jdk15on.version>1.70</bcprov.jdk15on.version>
+        <bcpkix.jdk15on.version>1.70</bcpkix.jdk15on.version>
+        <caffeine.version>3.0.5</caffeine.version>
         <mapstruct.version>1.4.2.Final</mapstruct.version>
 
         <!-- tools-file -->
-        <tika-core.version>1.24.1</tika-core.version>
-        <opencsv.version>4.1</opencsv.version>
+        <tika-core.version>2.3.0</tika-core.version>
+        <opencsv.version>5.6</opencsv.version>
 
 
         <!-- dataBase-->
         <mysql.version>8.0.21</mysql.version>
-        <h2.version>1.4.200</h2.version>
+        <h2.version>2.1.210</h2.version>
         <!-- 1.2.4支持jdk8时间打印 -->
-        <druid.version>1.2.4</druid.version>
+        <druid.version>1.2.8</druid.version>
         <!-- mybatis-plus 功能稳定性较差，且版本更新慢，bug修复可能长达数月，尽量只用其稳定功能，减少版本变更 -->
-        <mybatis-plus.version>3.4.2</mybatis-plus.version>
-        <pagehelper.version>5.2.0</pagehelper.version>
-        <pagehelper-starter.version>1.3.0</pagehelper-starter.version>
-        <beecp.version>3.1.7</beecp.version>
+        <mybatis-plus.version>3.5.1</mybatis-plus.version>
+        <pagehelper.version>5.3.0</pagehelper.version>
+        <pagehelper-starter.version>1.4.1</pagehelper-starter.version>
+        <beecp.version>3.3.2</beecp.version>
         <p6spy.version>3.9.1</p6spy.version>
 
         <!-- test -->
