升级 spring boot 2.6 相关依赖升级 springboot 2.4.5 -> 2.6.4 spring-cloud 2020.0.2 -> 2021.0.1 swagger2 1.6.2 -> 1.6.5（默认不引入） swagger3 2.1.9 -> 2.1.13（默认不引入） xstream 1.4.17 -> 1.4.19 guava 30.1.1-jre -> 31.1-jre alibaba.transmittable 2.12.1 -> 2.12.5 bcprov.jdk15on 1.68 -> 1.70 bcpkix.jdk15on 1.68 -> 1.70 caffeine 2.8.5 -> 3.0.5（默认不引入） tika-core 1.24.1 -> 2.3.0 opencsv 4.1 -> 5.6 h2 1.4.200 -> 2.1.210 mybatis-plus 3.4.2 -> 3.5.1 p6spy 3.3.2 -> 3.9.1

--- a/shoulder-build/shoulder-starters/shoulder-starter-mysql/pom.xml
+++ b/shoulder-build/shoulder-starters/shoulder-starter-mysql/pom.xml
@@ -30,6 +30,7 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
+        <!-- Spring Boot 默认的 HikariCP 性能早就超过 druid 了，当然 druid 提供了更丰富的监控能力，但 shoulder 认为这不应该由应用程序承载该能力，而是依赖更专业的监控系统 -->
         <dependency>
             <groupId>com.zaxxer</groupId>
             <artifactId>HikariCP</artifactId>
