--- a/shoulder-archetype-simple/src/main/resources/archetype-resources/pom.xml
+++ b/shoulder-archetype-simple/src/main/resources/archetype-resources/pom.xml
@@ -37,10 +37,14 @@
             <artifactId>shoulder-starter-mysql</artifactId>
         </dependency>-->
 
-        <!-- 对象转换 -->
+        <!-- 对象转换 mapstruct （可选） -->
         <!--<dependency>
-            <groupId>cn.itlym</groupId>
-            <artifactId>shoulder-starter-beanmap</artifactId>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct-processor</artifactId>
         </dependency>-->
 
         <!-- 操作日志 -->
