--- a/shoulder-build/shoulder-base/shoulder-core/pom.xml
+++ b/shoulder-build/shoulder-base/shoulder-core/pom.xml
@@ -34,15 +34,15 @@
             <optional>true</optional>
         </dependency>
 
-        <!-- ...................... lombok ...................... -->
-        <!--<dependency>
+        <!-- ...................... lombok - shoulder 框架内部应避免使用 lombok...................... -->
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-        </dependency>-->
-        <dependency>
+        </dependency>
+        <!--<dependency>
             <groupId>cn.itlym.shoulder</groupId>
             <artifactId>lombok</artifactId>
-        </dependency>
+        </dependency>-->
 
         <!-- ...................... 工具 ...................... -->
 
