--- a/shoulder-dependencies/pom.xml
+++ b/shoulder-dependencies/pom.xml
@@ -72,7 +72,7 @@
         <!-- useful tools -->
         <pinyin4j.version>2.5.1</pinyin4j.version>
         <hutool.version>5.7.22</hutool.version>
-        <javassist.version>3.28.0-GA</javassist.version>
+        <javassist.version>3.29.2-GA</javassist.version>
         <javax.ws.rs-api.version>2.1.1</javax.ws.rs-api.version>
 
         <guava.version>31.1-jre</guava.version>
@@ -89,6 +89,7 @@
         <tika-core.version>2.3.0</tika-core.version>
         <opencsv.version>5.6</opencsv.version>
 
+        <lombok.version>1.18.24</lombok.version>
 
         <!-- dataBase-->
         <mysql.version>8.0.21</mysql.version>
@@ -149,6 +150,13 @@
                 <version>${spring-cloud.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>${lombok.version}</version>
+                <optional>true</optional>
             </dependency>
 
             <!-- ================================== Shoulder-framework party ==================================== -->
@@ -278,12 +286,6 @@
             <dependency>
                 <groupId>cn.itlym</groupId>
                 <artifactId>shoulder-starter-operation-log</artifactId>
-                <version>${shoulder.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>cn.itlym</groupId>
-                <artifactId>shoulder-starter-beanmap</artifactId>
                 <version>${shoulder.version}</version>
             </dependency>
 
