--- a/shoulder-dependencies/pom.xml
+++ b/shoulder-dependencies/pom.xml
@@ -21,17 +21,17 @@
         <!-- dependencies bom -->
 
         <!-- spring-security-oauth2-autoconfigure -->
-        <spring-security-oauth2-autoconfigure.version>2.4.5</spring-security-oauth2-autoconfigure.version>
-        <spring-security-oauth2.version>2.5.0.RELEASE</spring-security-oauth2.version>
-        <nimbus-jose-jwt.version>8.21</nimbus-jose-jwt.version>
-        <spring-oauth2-server.version>0.1.0</spring-oauth2-server.version>
+        <spring-security-oauth2-autoconfigure.version>2.6.8</spring-security-oauth2-autoconfigure.version>
+        <spring-security-oauth2.version>2.5.2.RELEASE</spring-security-oauth2.version>
+        <nimbus-jose-jwt.version>9.31</nimbus-jose-jwt.version>
+        <spring-oauth2-server.version>0.1.2</spring-oauth2-server.version>
 
-        <spring-boot.version>2.6.4</spring-boot.version>
+        <spring-boot.version>2.7.9</spring-boot.version>
         <!-- 由于Spring Boot提供了Maven BOM来管理依赖版本，因此您无需指定版本 -->
 
         <!-- 与 boot 版本对应关系 https://start.spring.io/actuator/info -->
         <!-- 最新 spring cloud 版本：https://spring.io/projects/spring-cloud#learn -->
-        <spring-cloud.version>2021.0.1</spring-cloud.version>
+        <spring-cloud.version>2022.0.1</spring-cloud.version>
         <!--<spring-cloud.version>Hoxton.SR10</spring-cloud.version>-->
 
         <!-- build -->
@@ -41,19 +41,19 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <!-- api-doc -->
-        <swagger2.version>1.6.5</swagger2.version>
+        <swagger2.version>1.6.9</swagger2.version>
         <!-- openApi(swagger)是行业标准，swagger 1.7 更名为 io.swagger.core.v3 但 swagger2 绝大多数开发者更熟悉而非 swagger3 -->
-        <swagger3.version>2.1.13</swagger3.version>
+        <swagger3.version>2.2.8</swagger3.version>
 
         <!-- 使用 springfox 解析文档 -->
         <springfox.version>3.0.0</springfox.version>
         <!-- knife4j 前身是 swagger-bootstrap-ui，一个用于优化 swagger-ui 的项目，视觉效果更好 -->
-        <knife4j.version>3.0.2</knife4j.version>
+        <knife4j.version>3.0.3</knife4j.version>
 
         <!-- csv 解析 https://github.com/uniVocity/univocity-parsers/releases -->
         <univocity.version>2.9.1</univocity.version>
         <!-- xml 解析 https://github.com/x-stream/xstream/releases -->
-        <xstream.version>1.4.19</xstream.version>
+        <xstream.version>1.4.20</xstream.version>
 
         <!-- apache-common-tools -->
         <commons-beanutils.version>1.9.3</commons-beanutils.version>
@@ -61,46 +61,46 @@
         <commons-collections4.version>4.4</commons-collections4.version>
         <commons-exec.version>1.3</commons-exec.version>
         <commons-email.version>1.5</commons-email.version>
-        <commons-io.version>2.8.0</commons-io.version>
+        <commons-io.version>2.11.0</commons-io.version>
         <commons-configuration.version>1.10</commons-configuration.version>
-        <commons-lang3.version>3.11</commons-lang3.version>
+        <commons-lang3.version>3.12.0</commons-lang3.version>
         <commons-net.version>3.6</commons-net.version>
-        <commons-daemon.version>1.2.4</commons-daemon.version>
+        <commons-daemon.version>1.3.3</commons-daemon.version>
 
         <!-- java native access -->
-        <jna.version>5.8.0</jna.version>
+        <jna.version>5.13.0</jna.version>
         <!-- useful tools -->
         <pinyin4j.version>2.5.1</pinyin4j.version>
-        <hutool.version>5.7.22</hutool.version>
+        <hutool.version>5.8.15</hutool.version>
         <javassist.version>3.29.2-GA</javassist.version>
         <javax.ws.rs-api.version>2.1.1</javax.ws.rs-api.version>
 
         <guava.version>31.1-jre</guava.version>
-        <findbugs-annotations.version>3.0.0</findbugs-annotations.version>
+        <findbugs-annotations.version>3.0.1</findbugs-annotations.version>
         <!-- inheritable threadLocal https://github.com/alibaba/transmittable-thread-local/releases -->
-        <alibaba.transmittable.version>2.12.5</alibaba.transmittable.version>
+        <alibaba.transmittable.version>2.14.2</alibaba.transmittable.version>
 
         <bcprov.jdk15on.version>1.70</bcprov.jdk15on.version>
         <bcpkix.jdk15on.version>1.70</bcpkix.jdk15on.version>
         <caffeine.version>3.0.5</caffeine.version>
-        <mapstruct.version>1.4.2.Final</mapstruct.version>
+        <mapstruct.version>1.5.3.Final</mapstruct.version>
 
         <!-- tools-file -->
-        <tika-core.version>2.3.0</tika-core.version>
+        <tika-core.version>2.7.0</tika-core.version>
         <opencsv.version>5.6</opencsv.version>
 
-        <lombok.version>1.18.24</lombok.version>
+        <lombok.version>1.18.26</lombok.version>
 
         <!-- dataBase-->
         <mysql.version>8.0.21</mysql.version>
-        <h2.version>2.1.210</h2.version>
+        <h2.version>2.1.214</h2.version>
         <!-- 1.2.4支持jdk8时间打印 -->
         <druid.version>1.2.8</druid.version>
         <!-- mybatis-plus 功能稳定性较差，且版本更新慢，bug修复可能长达数月，尽量只用其稳定功能，减少版本变更 -->
-        <mybatis-plus.version>3.5.1</mybatis-plus.version>
-        <pagehelper.version>5.3.0</pagehelper.version>
-        <pagehelper-starter.version>1.4.1</pagehelper-starter.version>
-        <beecp.version>3.3.2</beecp.version>
+        <mybatis-plus.version>3.5.3.1</mybatis-plus.version>
+        <pagehelper.version>5.3.2</pagehelper.version>
+        <pagehelper-starter.version>1.4.6</pagehelper-starter.version>
+        <beecp.version>3.4.0</beecp.version>
         <p6spy.version>3.9.1</p6spy.version>
 
         <!-- test -->
@@ -464,6 +464,7 @@
                 <version>${commons-lang3.version}</version>
             </dependency>
 
+            <!-- Apache Commons Daemon 可以让Java程序在linux系统上以服务器的方式运行。通过jsvc执行写好脚本，可以启动我们的java项目  本项目未使用-->
             <dependency>
                 <groupId>commons-daemon</groupId>
                 <artifactId>commons-daemon</artifactId>
