--- a/shoulder-dependencies/pom.xml
+++ b/shoulder-dependencies/pom.xml
@@ -170,6 +170,13 @@
             </dependency>
 
             <dependency>
+                <groupId>org.redisson</groupId>
+                <artifactId>redisson</artifactId>
+                <version>3.20.0</version>
+            </dependency>
+
+
+            <dependency>
                 <groupId>cn.itlym</groupId>
                 <artifactId>shoulder-core</artifactId>
                 <version>${shoulder.version}</version>
