--- a/shoulder-build/shoulder-base/shoulder-cluster/pom.xml
+++ b/shoulder-build/shoulder-base/shoulder-cluster/pom.xml
@@ -32,6 +32,12 @@
         </dependency>
 
         <dependency>
+            <groupId>cn.itlym</groupId>
+            <artifactId>shoulder-batch</artifactId>
+            <optional>true</optional>
+        </dependency>
+
+        <dependency>
             <groupId>org.redisson</groupId>
             <artifactId>redisson</artifactId>
             <optional>true</optional>
