--- a/shoulder-build/shoulder-starters/shoulder-starter-mysql/pom.xml
+++ b/shoulder-build/shoulder-starters/shoulder-starter-mysql/pom.xml
@@ -26,11 +26,19 @@
         </dependency>
 
         <!-- mysql -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.33</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.alibaba/druid-spring-boot-starter -->
         <!--        <dependency>-->
-        <!--            <groupId>mysql</groupId>-->
-        <!--            <artifactId>mysql-connector-java</artifactId>-->
-        <!--        <version>8.0.32</version>-->
+        <!--            <groupId>com.alibaba</groupId>-->
+        <!--            <artifactId>druid-spring-boot-starter</artifactId>-->
+        <!--            <version>1.2.18</version>-->
         <!--        </dependency>-->
+
         <!-- Spring Boot 默认的 HikariCP 性能早就超过 druid 了，当然 druid 提供了更丰富的监控能力，但 shoulder 认为这不应该由应用程序承载该能力，而是依赖更专业的监控系统 -->
         <dependency>
             <groupId>com.zaxxer</groupId>
