--- a/.drone.yml
+++ b/.drone.yml
@@ -21,7 +21,7 @@ steps:
       - name: mvnCache
         path: /root/.m2
     commands:
-      - mvn clean validate -DskipTests=true -B -V -T 1C
+      - mvn clean install -DskipTests=true -B -V -T 1C
       - echo 'FINISHED deploy!'
 #
 #  - name: 根据 commit 自动生成 CHANGELOG、README
