--- a/shoulder-parent/pom.xml
+++ b/shoulder-parent/pom.xml
@@ -91,6 +91,30 @@
         <pluginManagement>
             <plugins>
 
+                <!-- shoulder 开发的错误码插件 -->
+                <plugin>
+                    <groupId>cn.itlym</groupId>
+                    <artifactId>shoulder-maven-plugin</artifactId>
+                    <version>${shoulder-maven-plugin.version}</version>
+                    <configuration>
+                        <!-- 【必填】本组件对应的错误码前缀 -->
+                        <!--<errorCodePrefix>0x0000</errorCodePrefix>-->
+                        <!-- 【必填】要生成错误码文件，扫描的包路径，通常为组件错误码枚举/常量类所在包路径，越精确，越能减少插件构建时间 -->
+                        <!--<scanPackage>org.shoulder.core</scanPackage>-->
+                    </configuration>
+                    <executions>
+                        <!-- 开启插件的哪些功能 -->
+                        <execution>
+                            <!-- 在 mvn compile 阶段触发该插件 -->
+                            <phase>deploy</phase><!-- shoulder-maven-plugin deploy 发布才生成 erorCode标注，compile 打包编译就生成 -->
+                            <goals>
+                                <!-- 执行该插件的 生成错误码翻译 能力 -->
+                                <goal>generateErrorCodeInfo</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+
                 <!-- compiler settings -->
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -420,30 +444,6 @@
                             <forceLongFormat>false</forceLongFormat>
                         </gitDescribe>
                     </configuration>
-                </plugin>
-
-                <!-- shoulder 开发的错误码插件 -->
-                <plugin>
-                    <groupId>cn.itlym.shoulder</groupId>
-                    <artifactId>shoulder-maven-plugin</artifactId>
-                    <version>${shoulder-maven-plugin.version}</version>
-                    <configuration>
-                        <!-- 【必填】本组件对应的错误码前缀 -->
-                        <!--<errorCodePrefix>0x0000</errorCodePrefix>-->
-                        <!-- 【必填】要生成错误码文件，扫描的包路径，通常为组件错误码枚举/常量类所在包路径，越精确，越能减少插件构建时间 -->
-                        <!--<scanPackage>org.shoulder.core</scanPackage>-->
-                    </configuration>
-                    <executions>
-                        <!-- 开启插件的哪些功能 -->
-                        <execution>
-                            <!-- 在 mvn compile 阶段触发该插件 -->
-                            <phase>deploy</phase><!-- shoulder-maven-plugin deploy 发布才生成 erorCode标注，compile 打包编译就生成 -->
-                            <goals>
-                                <!-- 执行该插件的 生成错误码翻译 能力 -->
-                                <goal>generateErrorCodeInfo</goal>
-                            </goals>
-                        </execution>
-                    </executions>
                 </plugin>
 
             </plugins>
