--- a/.drone.yml
+++ b/.drone.yml
@@ -20,6 +20,7 @@ steps:
     commands:
       #      - mvn clean install -Dmaven.test.skip=true -pl shoulder-dependencies -am
       #      - mvn clean install -Dmaven.test.skip=true -pl shoulder-parent -am
+      - sudo export MAVEN_OPTS="-Xmx400m -XX:MaxPermSize=90m"
       - mvn clean deploy -DskipTests=true -B -V -T 1C
       - echo 'FINISHED install!!'
 #
