--- a/.drone.yml
+++ b/.drone.yml
@@ -35,8 +35,11 @@ steps:
       #      - mvn clean install -Dmaven.test.skip=true -pl shoulder-dependencies -am
       #      - mvn clean install -Dmaven.test.skip=true -pl shoulder-parent -am
       #- sudo export MAVEN_OPTS="-Xmx400m -Xms400m -XX:MaxPermSize=90m"
-      # 2C 每个可用 C 2线程；deploy 主要是发布，与网络相关，-T 4 4个线程
-      - mvn clean deploy -DskipTests=true -B -V -T 1C
+      # 2C 每个可用 C 2线程；deploy 主要是发布，与网络相关，-T 4 4个线程 -B batch 批量处理 -V Display version information
+      # 改成部署前签名，否则不会上传
+      - sed -i 's#<phase>deploy</phase><!-- gpg phase verify deploy -->#<phase>verify</phase><!-- gpg phase verify deploy -->#g' pom.xml
+      - sed -i 's#<phase>deploy</phase><!-- gpg phase verify deploy -->#<phase>verify</phase><!-- gpg phase verify deploy -->#g' shoulder-parent/pom.xml
+      - mvn clean deploy -P release -Dmaven.test.skip=true=true -B -V -T 1C
       - echo 'FINISHED deploy!!'
 #
 #  - name: 根据 commit 自动生成 CHANGELOG、README
