--- a/.drone.yml
+++ b/.drone.yml
@@ -39,7 +39,7 @@ steps:
       # 改成部署前签名，否则不会上传
       - sed -i 's#<phase>deploy</phase><!-- gpg phase verify deploy -->#<phase>verify</phase><!-- gpg phase verify deploy -->#g' pom.xml
       - sed -i 's#<phase>deploy</phase><!-- gpg phase verify deploy -->#<phase>verify</phase><!-- gpg phase verify deploy -->#g' shoulder-parent/pom.xml
-      - mvn clean deploy -P release -Dmaven.test.skip=true=true -B -V -T 1C
+      - mvn clean deploy -P release -Dmaven.test.skip=true -B -V -T 1C
       - echo 'FINISHED deploy!!'
 #
 #  - name: 根据 commit 自动生成 CHANGELOG、README
