--- a/shoulder-build/shoulder-base/shoulder-crypto-negotiation/pom.xml
+++ b/shoulder-build/shoulder-base/shoulder-crypto-negotiation/pom.xml
@@ -88,7 +88,7 @@
 
             <!-- 自动生成错误码以及对应的翻译 可以在 target 目录生成所有实现 ErrorCode 接口错误码枚举类的翻译文件 -->
             <plugin>
-                <groupId>cn.itlym</groupId>
+                <groupId>cn.itlym.shoulder</groupId>
                 <artifactId>shoulder-maven-plugin</artifactId>
                 <configuration>
                     <!-- 【必填】本组件对应的错误码前缀 -->
