--- a/.drone.yml
+++ b/.drone.yml
@@ -42,7 +42,8 @@ steps:
       - mvn clean deploy -P release -Dmaven.test.skip=true -B -V -T 1C
       - echo 'FINISHED deploy!!'
 #
-#  - name: 根据 commit 自动生成 CHANGELOG、README
+      #  - name: 根据 commit 自动生成 CHANGELOG、README https://github.com/mbinary-toys/csdn-tools
+      # - https://github.com/crawlab-team/artipub
 #    image: cnlym/maven:3-jdk-11-alpine-aliyun
 #    commands:
 #      - echo 'mock autogenerate changeLog!'
@@ -55,6 +56,9 @@ steps:
 #  - name: 创建此版本的维护分支（创建一个新分支，并更新到下一个次版本）
 #    image: cnlym/maven:3-jdk-11-alpine-aliyun
 #    commands:
+      #- git -branch 新分支
+      #- git 修改版本号
+      #- git push
 #      - echo 'mock autogenerate maintain branch!'
 #
 #  - name: 在官网，start上添加该版本
