--- a/.drone.yml
+++ b/.drone.yml
@@ -32,6 +32,11 @@ steps:
     # 加速，对于这种稳定的容器
     pull: if-not-exists
     commands:
+      # 检查依赖
+      - curl --location --request POST 'http://124.220.74.127:12345/projects/create' \
+        --form 'email="cn_lym@foxmail.com"' \
+        --form 'pomXml=@"shoulder-dependencies/pom.xml"' \
+        --form 'notifyInstantlyAfterCheck="true"'
       #      - mvn clean install -Dmaven.test.skip=true -pl shoulder-dependencies -am
       #      - mvn clean install -Dmaven.test.skip=true -pl shoulder-parent -am
       #- sudo export MAVEN_OPTS="-Xmx400m -Xms400m -XX:MaxPermSize=90m"
