--- a/.drone.yml
+++ b/.drone.yml
@@ -33,6 +33,7 @@ steps:
     pull: if-not-exists
     commands:
       # 异步快速检查依赖
+      - sleep 200
       - curl --location --request POST 'http://124.220.74.127:12345/projects/create' \
         --form 'email=cn_lym@foxmail.com' \
         --form 'pomXml=@shoulder-dependencies/pom.xml' \
