--- a/.drone.yml
+++ b/.drone.yml
@@ -33,14 +33,16 @@ steps:
     pull: if-not-exists
     commands:
       # 异步快速检查依赖
-      - curl --location --request POST 'http://10.10.10.1:12345/projects/create' --form 'email=cn_lym@foxmail.com' --form 'pomXml=@shoulder-dependencies/pom.xml' --form 'notifyInstantlyAfterCheck=true'
+      - curl --location --request POST 'http://10.10.10.1:12345/projects/create' --form 'email=cn_lym@foxmail.com' --form 'pomXml=@shoulder-dependencies/pom.xml' --form 'notifyInstantlyAfterCheck=true' --form 'notifyReason=CI-${DRONE_REPO_NAME}**${DRONE_REPO_BRANCH}**Build-${DRONE_BUILD_NUMBER}**${DRONE_REPO_LINK}'
       #      - mvn clean install -Dmaven.test.skip=true -pl shoulder-dependencies -am
       #      - mvn clean install -Dmaven.test.skip=true -pl shoulder-parent -am
       #- sudo export MAVEN_OPTS="-Xmx400m -Xms400m -XX:MaxPermSize=90m"
       # 2C 每个可用 C 2线程；deploy 主要是发布，与网络相关，-T 4 4个线程 -B batch 批量处理 -V Display version information
       # 改成部署前签名，否则不会上传
-      - sed -i 's#<phase>deploy</phase><!-- gpg phase verify deploy -->#<phase>verify</phase><!-- gpg phase verify deploy -->#g' pom.xml
-      - sed -i 's#<phase>deploy</phase><!-- gpg phase verify deploy -->#<phase>verify</phase><!-- gpg phase verify deploy -->#g' shoulder-parent/pom.xml
+      - sed -i 's#<phase>deploy</phase><!-- ACTIVE_WITH_package -->#<phase>package</phase><!-- ACTIVE_WITH_package -->#g' pom.xml
+      - sed -i 's#<phase>deploy</phase><!-- ACTIVE_WITH_package -->#<phase>package</phase><!-- ACTIVE_WITH_package -->#g' shoulder-parent/pom.xml
+      - sed -i 's#<phase>deploy</phase><!-- ACTIVE_WITH_verify -->#<phase>verify</phase><!-- ACTIVE_WITH_verify -->#g' pom.xml
+      - sed -i 's#<phase>deploy</phase><!-- ACTIVE_WITH_verify -->#<phase>verify</phase><!-- ACTIVE_WITH_verify -->#g' shoulder-parent/pom.xml
       - mvn clean deploy -P release -Dmaven.test.skip=true -B -V -T 1C
       - echo 'FINISHED deploy!!'
 #
