--- a/.drone.yml
+++ b/.drone.yml
@@ -90,11 +90,13 @@ steps:
 #    commands:
 #      - echo 'mock announcement of issuance!'
 #
-#  - name: 钉钉通知、微信通知构建结果
-#    image: guoxudongdocker/drone-dingtalk
-#    settings:
-#      token: 5f6c32b36e771df227b1ccb8898325158e12d851ae61982d1ec225a1aa58e251
-#      type: markdown
+  #  - name: 构建结果通知 Build Notification. --- with DingTalk
+  - name:
+    image: guoxudongdocker/drone-dingtalk
+    settings:
+      token:
+        from_secret: ding_token
+      type: markdown
 
 
 trigger:
