--- a/shoulder-parent/pom.xml
+++ b/shoulder-parent/pom.xml
@@ -125,6 +125,23 @@
                         <encoding>${project.build.sourceEncoding}</encoding>
                         <source>${maven.compiler.source}</source>
                         <target>${maven.compiler.target}</target>
+<!--                        <compilerArgs>-->
+<!--                            <arg>-XDcompilePolicy=simple</arg>-->
+<!--                            <arg>-Xplugin:ErrorProne</arg>-->
+<!--                        </compilerArgs>-->
+<!--                        修复-->
+<!--                        <compilerArgs>-->
+<!--                            <arg>-XDcompilePolicy=simple</arg>-->
+<!--                            <arg>-Xplugin:ErrorProne -XepPatchChecks:ArrayEquals-->
+<!--                                -XepPatchLocation:IN_PLACE</arg>-->
+<!--                        </compilerArgs>-->
+<!--                        <annotationProcessorPaths>-->
+<!--                            <path>-->
+<!--                                <groupId>com.google.errorprone</groupId>-->
+<!--                                <artifactId>error_prone_core</artifactId>-->
+<!--                                <version>2.15.0</version>-->
+<!--                            </path>-->
+<!--                        </annotationProcessorPaths>-->
                     </configuration>
                 </plugin>
 
